--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:text="Search"
-        app:layout_constraintBottom_toBottomOf="@+id/artistName"
+        app:layout_constraintBottom_toBottomOf="@+id/inputParent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/artistName" />
+        app:layout_constraintTop_toTopOf="@+id/inputParent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/artistName"
+        android:id="@+id/inputParent"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -29,6 +29,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/artistName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Artist" />
@@ -43,7 +44,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/artistName"
+        app:layout_constraintTop_toBottomOf="@+id/inputParent"
         app:layout_constraintVertical_bias="0.366" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
